style.css
/* General */
@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Rubik";
  line-height: 1.6;
}

html {
  scroll-behavior: smooth;
}

h1 {
  font-family: "Outfit", sans-serif;
}

p {
  color: #3f3f46;
}

/* Transition */

a,
.btn {
  transition: all 300ms ease;
}

/* Desktop navigation */

nav,
.nav-links {
  display: flex;
}

nav {
  justify-content: space-around;
  align-items: center;
  height: 15vh;
}

.nav-links {
  list-style-type: none;
  gap: 2rem;
  font-size: 1.5rem;
}

.nav-links a {
  text-decoration: none;
  color: inherit;
}

.nav-links a:hover {
  background-color: #7c3aed;
  color: white;
  padding: 10px;
  border-radius: 2px;
}

.logo {
  font-size: 2rem;
}

.logo:hover {
  cursor: default;
}

/* Hamburger menu */

#hamburger-nav {
  display: none;
}

.hamburger-menu {
  position: relative;
  display: inline-block;
}

.hamburger-icon {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 24px;
  width: 30px;
  cursor: pointer;
}

.hamburger-icon span {
  width: 100%;
  height: 2px;
  background-color: black;
  transition: all 0.3 ease-in-out;
}

.menu-links {
  position: absolute;
  top: 100%;
  right: 0;
  background-color: white;
  width: fit-content;
  max-height: 0;
  overflow: hidden;
  transition: all 0.3 ease-in-out;
}

.menu-links a {
  display: block;
  padding: 10px;
  text-align: center;
  font-size: 1.5rem;
  color: black;
  text-decoration: none;
  transition: all 0.3 ease-in-out;
}

.menu-links li {
  list-style: none;
}

.menu-links.open {
  max-height: 300px;
}

.hamburger-icon.open span:first-child {
  transform: rotate(45deg) translate(10px, 5px);
}

.hamburger-icon.open span:nth-child(2) {
  opacity: 0;
}

.hamburger-icon.open span:last-child {
  transform: rotate(-45deg) translate(10px, -5px);
}

/* Sections */

section {
  padding-top: 4vh;
  margin: 0 10rem;
  min-height: 96vh;
}

.section-container {
  display: flex;
  margin: 0 10vw;
}

/* Hero section */

#hero {
  display: flex;
  justify-content: center;
  gap: 5rem;
}

.karolina {
  color: #7c3aed;
}

.section__pic-container {
  display: flex;
  height: 400px;
  width: 400px;
  margin: auto 0;
}

.section__text {
  align-self: center;
  text-align: center;
}

.section__text p {
  font-weight: 500;
}

.section__text__p1 {
  text-align: center;
}

.section__text__p2 {
  font-size: 1.75rem;
  margin-bottom: 1rem;
}

.title {
  font-size: 3rem;
  text-align: center;
}

#socials-container {
  display: flex;
  justify-content: center;
  margin-top: 1rem;
  gap: 1rem;
}

/* About section */

#about {
  position: relative;
}

.about-containers {
  gap: 2rem;
  margin-bottom: 2rem;
  margin-top: 2rem;
}

.about-details-container {
  justify-content: center;
  flex-direction: column;
}

.text-container {
  padding: 1rem;
}

.about-containers,
.about-details-container {
  display: flex;
}

.details-container {
  padding: 1.5rem;
  flex: 1;
  border-radius: 2rem;
  border: #7c3aed solid 0.1rem;
  text-align: center;
  max-width: 800px;
}

.skills p {
  width: fit-content;
  margin: auto;
  padding: 0.5rem;
  border-radius: 2px;
}

.skills {
  display: flex;
  margin-top: 2rem;
  align-items: center;
  justify-content: space-around;
}

/* Projects section */
.projects-containers {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  margin: 3rem 10vw 0;
  align-items: center;
}

.project-img {
  height: 250px;
}

#projects {
  position: relative;
}

.project-title {
  margin: 1rem;
}

.project-description {
  margin: 1rem;
}

/* Contact section */

#contact {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.contact-container {
  border: #7c3aed solid 0.1rem;
  border-radius: 2rem;
  margin: 2rem auto;
  width: fit-content;
  display: flex;
  justify-content: center;
}

.contact-detail {
  padding: 20px;
  align-items: center;
  display: flex;
  cursor: pointer;
}

.contact-detail .icon {
  margin: 10px;
}

.contact-detail a {
  text-decoration: none;
  color: inherit;
}

/* Footer */

footer p {
  text-align: center;
  padding: 1rem;
}

/* Icons */

.icon {
  cursor: pointer;
  height: 2rem;
}

.arrow {
  position: absolute;
  right: -5rem;
  bottom: 2.5rem;
}

i {
  font-size: 2.5rem;
}

/* Buttons */

.btn-container {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.btn {
  font-weight: 600;
  transition: all 300ms ease;
  padding: 1rem;
  width: 8rem;
  border-radius: 2px;
}

.btn-color-1,
.btn-color-2 {
  border: #7c3aed 0.1rem solid;
}

.btn-color-1:hover,
.btn-color-2:hover {
  cursor: pointer;
}

.btn-color-1,
.btn-color-2:hover {
  background: #7c3aed;
  color: white;
}

.btn-color-1:hover {
  background: #8b5cf6;
}

.btn-color-2 {
  background: none;
  color: #7c3aed;
}

.btn-color-2:hover {
  border: #7c3aed 0.1rem solid;
}

.btn-container {
  gap: 1rem;
}

/* Media queries */

@media screen and (max-width: 1200px) {
  #desktop-nav {
    display: none;
  }

  #hamburger-nav {
    display: flex;
  }

  #hero {
    flex-direction: column;
    align-items: center;
  }

  .hero-pic {
    max-width: 400px;
    max-height: 400px;
  }

  section {
    margin: 0;
  }

  .about-containers {
    flex-direction: column;
  }

  .project-img {
    max-width: 70vw;
  }

  #about .title,
  #projects .title {
    margin-top: 3rem;
  }

  .skills {
    flex-wrap: wrap;
  }
}

@media only screen and (max-width: 480px) {
  #hero {
    gap: 0;
  }

  .section__pic-container {
    display: flex;
    justify-content: center;
    margin: 0;
  }

  .hero-pic {
    width: 300px;
    height: 300px;
  }

  .contact-container {
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .contact-detail {
    display: flex;
    flex-direction: column;
  }
}

